# Schedule-4zip-1

./: .replit  pyproject.toml
Schedule-4/: .dockerignore  .gitignore  .replit  Dockerfile  README.md  bot.py  groups.json  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  settings.json  settings.json.example  start.sh  user_groups.json  webapp.py
Schedule-4/static/: index.html
