[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=22.7",
    "flask>=3.0.0",
    "requests>=2.32.0",
    "gunicorn>=25.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
]
